Added CollectionDetail action method

--- a/RgSite/Views/Products/Index.cshtml
+++ b/RgSite/Views/Products/Index.cshtml
@@ -88,64 +88,64 @@
                             <div class="product-wrap flexthis">
                                 <div class="product-left-wrap flexthis">
                                     <div class="product1">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[0].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[0].ProductCollectionId">
                                             <img src="@Model.Collections[0].ImageUrl">
                                         </a>
                                     </div>
                                     <div class="product2">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[1].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[1].ProductCollectionId">
                                             <img src="@Model.Collections[1].ImageUrl">
                                         </a>
                                     </div>
                                 </div>
                                 <div class="product-mid-wrap flexthis">
                                     <div class="product3">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[2].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[2].ProductCollectionId">
                                             <img src="@Model.Collections[2].ImageUrl">
                                         </a>
                                     </div>
                                     <div class="product4">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[3].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[3].ProductCollectionId">
                                             <img src="@Model.Collections[3].ImageUrl">
                                         </a>
                                     </div>
                                     <div class="product5">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[4].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[4].ProductCollectionId">
                                             <img src="@Model.Collections[4].ImageUrl">
                                         </a>
                                     </div>
                                 </div>
                                 <div class="product-right-wrap flexthis">
                                     <div class="product6">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[5].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[5].ProductCollectionId">
                                             <img src="@Model.Collections[5].ImageUrl">
                                         </a>
                                     </div>
                                     <div class="inner-product flexthis">
                                         <div class="product7">
-                                            <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[6].ProductCollectionId">
+                                            <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[6].ProductCollectionId">
                                                 <img src="@Model.Collections[6].ImageUrl">
                                             </a>
                                         </div>
                                         <div class="product8">
-                                            <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[7].ProductCollectionId">
+                                            <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[7].ProductCollectionId">
                                                 <img src="@Model.Collections[7].ImageUrl">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="product9">
-                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[8].ProductCollectionId">
+                                        <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[8].ProductCollectionId">
                                             <img src="@Model.Collections[8].ImageUrl">
                                         </a>
                                     </div>
                                     <div class="inner-product flexthis">
                                         <div class="product10">
-                                            <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[9].ProductCollectionId">
+                                            <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[9].ProductCollectionId">
                                                 <img src="@Model.Collections[9].ImageUrl">
                                             </a>
                                         </div>
                                         <div class="product11">
-                                            <a asp-controller="Products" asp-action="Detail" asp-route-id="@Model.Collections[10].ProductCollectionId">
+                                            <a asp-controller="Products" asp-action="CollectionDetail" asp-route-id="@Model.Collections[10].ProductCollectionId">
                                                 <img src="@Model.Collections[10].ImageUrl">
                                             </a>
                                         </div>
