Updated collection detail page - Added images - Add list of products

--- a/RgSite/Views/Home/Index.cshtml
+++ b/RgSite/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
 </div>
 
 
-<div class="main-section alabaster" id="stories-section">
+<div class="main-section alabaster" id="carousel-section">
     <div class="container">
         <div class="row">
             <div id="demo" class="carousel slide" data-ride="carousel">
