--- a/RgSite/Views/Shared/_NavBar.cshtml
+++ b/RgSite/Views/Shared/_NavBar.cshtml
@@ -41,6 +41,12 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Stories</a>
                     </div>
                 </li>
+
+                <li class="nav-item nav-tab">
+                    <a class="nav-link text-dark" asp-controller="ShoppingCart" asp-action="Index">
+                        <i class="fas fa-shopping-cart fa-lg"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
