--- a/RgSite/Views/ShoppingCart/Index.cshtml
+++ b/RgSite/Views/ShoppingCart/Index.cshtml
@@ -31,9 +31,9 @@
                         <td class="item">@item.DisplayPrice</td>
                         <td class="item">@item.DisplaySize</td>
                         <td class="item">
-                            <input id="item-quantity" asp-for="@item.Quantity" onchange="onQuantityChanged(@item.Id, @item.Price.Id)" class="form-control col-sm-4" />
+                            <input id="item-quantity-@item.Id" asp-for="@item.Quantity" onchange="onQuantityChanged(@item.Id, @item.ProductId, @item.Price.Id)" class="form-control col-sm-4" />
                         </td>
-                        <td class="item" id="total">@item.DisplayTotal</td>
+                        <td class="item" id="total-@item.Id">@item.DisplayTotal</td>
                         <td class="item">
                             <i>
                                 <a id="delete-item" class="far fa-trash-alt pull-right" role="button" onclick="onDelete(event, @item.Id)" asp-controller="ShoppingCart" asp-action="RemoveFromCart" asp-route-id="@item.Id"></a>
@@ -43,6 +43,46 @@
                 }
             </tbody>
         </table>
+    </div>
+
+    <!--Working on this-->
+    <!--Cart Total-->
+    <div class="row">
+        <div class="col-md-8"></div>
+        <div class="col-md-4">
+            <div class="cart-total">
+                <h2>CART TOTAL</h2>
+                <table cellspacing="0">
+                    <tbody>
+                        <tr class="cart-subtotal">
+                            <th>SUBTOTAL</th>
+                            <td>
+                                <span class="amount">
+                                    @Model.SubTotal
+                                </span>
+                            </td>
+                        </tr>
+                        <tr class="cart-shipping">
+                            <th>SHIPPING</th>
+                            <td>
+                                <span class="amount">
+                                    @Model.ShippingCost
+                                </span>
+                            </td>
+                        </tr>
+                        <tr class="cart-total">
+                            <th>TOTAL</th>
+                            <td>
+                                <span class="amount">
+                                    @Model.Total
+                                </span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a id="checkout" class="btn btn-success btn-block custom-button-color" role="button" asp-controller="ShoppingCart" asp-action="Checkout" asp-route-id="@Model.User.Id">CHECKOUT</a>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -75,17 +115,65 @@
     #delete-item {
         color: red;
     }
+
+    .cart-total h2 {
+        font-size: 14px;
+        font-weight: 700;
+        margin: 0;
+        padding-bottom: 20px;
+        color: #262e31;
+    }
+
+    .cart-total table {
+        width: 100%;
+        border-collapse: separate;
+        margin: 0 0 6px;
+        padding: 0;
+        border-width: 0;
+        border-spacing: 0;
+        background-color: transparent;
+        display: table;
+    }
+
+    .cart-total table th {
+        width: 30%;
+        text-align: left;
+        font-weight: 700;
+        color: #8a97a2;
+        border: none;
+        vertical-align: top;
+        line-height: 1.5em;
+        padding: 9px 12px;
+    }
+
+    .amount {
+        font-size: 14px;
+        color: #8a97a2;
+        font-weight: 700;
+    }
+
+    .custom-button-color {
+        background-color: #e11383;
+	    border-color: #e11383;
+    }
+
+    .custom-button-color:hover {
+        background-color: #e11383;
+	    border-color: #e11383;
+    }
 </style>
 
 @section scripts
 {
     <script>
 
-        function onQuantityChanged(id, sizeId) {
-            var selectedQuantity = $('#item-quantity').val();
-            $.getJSON('/ShoppingCart/UpdateCart', { productId: id, selectedSizeId: sizeId, selectedQuantity: selectedQuantity  }, function(json) {
-                $('#total').text(json.price);
-            });
+        function onQuantityChanged(itemId, productId, sizeId) {
+            var selectedQuantity = $('#item-quantity-' + itemId).val();
+
+            $.getJSON('/ShoppingCart/UpdateCart', { itemId: itemId, productId: productId, selectedSizeId: sizeId, selectedQuantity: selectedQuantity },
+                function (json) {
+                    $('#total-' + itemId).text(json.price);
+                });
         }
 
         // Need to pass itemId here because for some reason if you dont, the the id of the first item in the cart is always passed.
