--- a/RgSite/Views/Shared/_Layout.cshtml
+++ b/RgSite/Views/Shared/_Layout.cshtml
@@ -23,13 +23,10 @@
 <body>
     <header class="header">
         <div class="container">
-            <figure class="logo animated fadeInDown delay-07s">
+            <figure class="logo">
                 <a href="#"><img src="~/images/logo.png" alt=""></a>
             </figure>
-            <h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
-            <ul class="we-create animated fadeInUp delay-1s">
-                <li>We are a digital agency that loves crafting beautiful websites.</li>
-            </ul>
+            <h1>Beyond Beautful Hair</h1>
         </div>
     </header>
     <partial name="_NavBar" />
