--- a/RgSite/Views/Shared/_NavBar.cshtml
+++ b/RgSite/Views/Shared/_NavBar.cshtml
@@ -1,12 +1,13 @@
 ﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
-        @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RgSite</a>*@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+
             <partial name="_LoginPartial" />
+
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item nav-tab">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
@@ -24,7 +25,7 @@
                     <a><img class="small-logo" src="~/images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item nav-tab">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">CONTACT US</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">CONTACT US</a>
                 </li>
                 <li class="nav-item nav-tab">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">RG NEAR YOU</a>
